--- a/custom-managers/regex-yaml.json5
+++ b/custom-managers/regex-yaml.json5
@@ -7,12 +7,12 @@
 			"fileMatch": [
 				"\\.ya?ml(\\.j2)?$"
 			],
-			"matchStrings": [
-				// Inline
-				"\\S+: \"?(?<currentValue>[^\"\\s]+)\"? # ?renovate: depName=(?<depName>\\S+)( datasource=(?<datasource>\\S+))?( versioning=(?<versioning>\\S+))?( extractVersion=(?<extractVersion>\\S+))?",
-				// Newline
-				"(?m:^[ \\t]*?# ?renovate: depName=(?<depName>\\S+)( datasource=(?<datasource>\\S+))?( versioning=(?<versioning>\\S+))?( extractVersion=(?<extractVersion>\\S+))?\\n[ \\t]*?\\S+: \"?(?<currentValue>[^\"]+?)\"?$)"
-			],
+		        matchStrings: [
+			    // Inline
+			    '\\S+: "?(?<currentValue>[^"\\s]+)"? # ?renovate: depName=(?<depName>\\S+)( datasource=(?<datasource>\\S+))?( versioning=(?<versioning>\\S+))?( extractVersion=(?<extractVersion>\\S+))?',
+			    // Newline
+			    '(?m:^[ \\t]*?# ?renovate: depName=(?<depName>\\S+)( datasource=(?<datasource>\\S+))?( versioning=(?<versioning>\\S+))?( extractVersion=(?<extractVersion>\\S+))?\\n[ \\t ]*?\\S+: "?(?<currentValue>[^" ]+?)"?$)',
+		        ],
 			"datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-releases{{/if}}",
 			"versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}",
 			"extractVersionTemplate": "{{#if extractVersion}}{{{extractVersion}}}{{else}}^(?<version>.*)${{/if}}"
