fix: refactor major update commit message prefix to match commitlint config

--- a/semantic-commits/update-types.json5
+++ b/semantic-commits/update-types.json5
@@ -9,7 +9,7 @@
                 "major"
             ],
             "semanticCommitType": "deps",
-            "commitMessagePrefix": "{{semanticCommitType}}({{semanticCommitScope}})!:",
+            "commitMessagePrefix": "{{semanticCommitType}}({{semanticCommitScope}}!):",
             "commitMessageExtra": "( {{currentVersion}} → {{newVersion}} )"
         },
         {
