--- a/semantic-commits/datasources-github-actions.json5
+++ b/semantic-commits/datasources-github-actions.json5
@@ -8,7 +8,7 @@
             "matchManagers": [
                 "github-actions"
             ],
-            "semanticCommitScope": "github-action"
+            "semanticCommitScope": "github-actions"
         }
     ]
 }
