fix: change type to custom manager

--- a/custom-managers/cruft.json5
+++ b/custom-managers/cruft.json5
@@ -1,7 +1,9 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "regexManagers": [
+    "customManagers": [
         {
+            "customType": "regex",
+            "description": "Update cruft templates.",
             "fileMatch": [
                 "^.cruft.json$"
             ],
