fix: add `go` datasource for go updates

--- a/semantic-commits/datasources-golang.json5
+++ b/semantic-commits/datasources-golang.json5
@@ -6,7 +6,8 @@
     "packageRules": [
         {
             "matchDatasources": [
-                "gomod"
+                "gomod",
+                "go"
             ],
             "semanticCommitScope": "go"
         }
