--- a/semantic-commits/datasources-golang.json5
+++ b/semantic-commits/datasources-golang.json5
@@ -6,8 +6,9 @@
     "packageRules": [
         {
             "matchDatasources": [
+                "go",
                 "gomod",
-                "go"
+                "golang-version"
             ],
             "semanticCommitScope": "go"
         }
