feat: Update datasource configurations for semantic commits

--- a/semantic-commits/datasources-docker.json5
+++ b/semantic-commits/datasources-docker.json5
@@ -5,9 +5,10 @@
     ],
     "packageRules": [
         {
-            "matchDatasources": [
+            "matchManagers": [
                 "docker"
             ],
+            "semanticCommitType": "chore",
             "semanticCommitScope": "container"
         }
     ]
