--- a/semantic-commits/datasources-github-actions.json5
+++ b/semantic-commits/datasources-github-actions.json5
@@ -8,6 +8,7 @@
             "matchManagers": [
                 "github-actions"
             ],
+            "semanticCommitType": "ci",
             "semanticCommitScope": "github-actions"
         }
     ]
