--- a/semantic-commits/datasources-terraform.json5
+++ b/semantic-commits/datasources-terraform.json5
@@ -5,6 +5,18 @@
     ],
     "packageRules": [
         {
+            "matchUpdateTypes": [
+                "major",
+                "minor",
+                "patch"
+            ],
+            "matchDatasources": [
+                "terraform-provider"
+            ],
+            "semanticCommitScope": "terraform",
+            "semanticCommitType": "fix"
+        },
+        {
             "matchDatasources": [
                 "terraform-provider"
             ],
