fix: match data source instead of manager for docker containers

--- a/semantic-commits/datasources-docker.json5
+++ b/semantic-commits/datasources-docker.json5
@@ -5,7 +5,7 @@
     ],
     "packageRules": [
         {
-            "matchManagers": [
+            "matchDatasources": [
                 "docker"
             ],
             "semanticCommitType": "chore",
