fix: use patch instead of fix for go deps

--- a/semantic-commits/datasources-golang.json5
+++ b/semantic-commits/datasources-golang.json5
@@ -15,8 +15,7 @@
                 "gomod",
                 "golang-version"
             ],
-            "semanticCommitScope": "go",
-            "semanticCommitType": "fix"
+            "semanticCommitType": "patch"
         },
         {
             "matchDatasources": [
