--- a/semantic-commits/datasources-golang.json5
+++ b/semantic-commits/datasources-golang.json5
@@ -15,7 +15,7 @@
                 "gomod",
                 "golang-version"
             ],
-            "semanticCommitType": "patch"
+            "semanticCommitType": "fix"
         },
         {
             "matchDatasources": [
