fix: update custom managers 2

--- a/custom-managers/regex-github-urls.json5
+++ b/custom-managers/regex-github-urls.json5
@@ -3,7 +3,9 @@
     "customManagers": [
         {
             "customType": "regex",
-            "fileMatch": ["*.yaml"],
+            "fileMatch": [
+                "(?:^|/)\.ya?ml$"
+            ],
             "matchStrings": [
                 // https://github.com/rancher/system-upgrade-controller/releases/download/v0.13.2/crd.yaml
                 "https:\\/\\/github.com\\/(?<depName>\\S+?\\/\\S+?)\\/releases\\/download\\/(?<currentValue>(v|\\d)\\S+?)\\/\\S+",
