--- a/custom-managers/regex-yaml.json5
+++ b/custom-managers/regex-yaml.json5
@@ -3,7 +3,9 @@
     "customManagers": [
         {
             "customType": "regex",
-            "fileMatch": ["*.yaml"],
+            "fileMatch": [
+                "(?:^|/)\.ya?ml$"
+            ],
             "matchStrings": [
                 // for the version on the left part, ignoring the right
                 "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\\s\\S+?:(?<currentValue>\\S+)\\s+\\S+:.+",
