--- a/semantic-commits/update-types.json5
+++ b/semantic-commits/update-types.json5
@@ -8,7 +8,7 @@
             "matchUpdateTypes": [
                 "major"
             ],
-            "commitMessagePrefix": "{{semanticCommitType}}({{semanticCommitScope}}!):",
+            "commitMessagePrefix": "{{semanticCommitType}}({{semanticCommitScope}})!:",
             "commitMessageExtra": "( {{currentVersion}} → {{newVersion}} )"
         },
         {
