--- a/.github/workflows/actionlint.yaml
+++ b/.github/workflows/actionlint.yaml
@@ -20,4 +20,4 @@ jobs:
         uses: jdx/mise-action@7a111ead46986ccad89a74ad013ba2a7c08c9e67 # v2.2.1
       
       - name: Run actionlint
-        run: mise exec actionlint
+        run: mise exec -- actionlint
