--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,4 +1,4 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [ "github>mirceanton/renovate-config" ]
+    "extends": [ "github>mirceanton/renovate-config//default.json5" ]
 }
