chore(mise): update config

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,4 +1,6 @@
 [tools]
+node = "22"
+"npm:renovate" = "40.3.4"
+
 "aqua:rhysd/actionlint" = "1.7.7"
 "pipx:yamllint" = "1.37.1"
-"npm:renovate" = "40.3.4"
