fix(custom-managers/mise): add additional refex for npm packages without '@'

--- a/custom-manager-mise.json5
+++ b/custom-manager-mise.json5
@@ -12,7 +12,8 @@
           "^\\.config/mise/config\\.toml$"
         ],
         "matchStrings": [
-          "\"npm:(?<packageName>@[\\w\\-\\/]+)\" = \"(?<currentValue>[\\d\\.]+)\""
+          "\"npm:(?<packageName>@[\\w\\-\\/]+)\" = \"(?<currentValue>[\\d\\.]+)\"",
+          "\"npm:(?<packageName>[\\w\\-\\/]+)\" = \"(?<currentValue>[\\d\\.]+)\""
         ],
         "datasourceTemplate": "npm",
         "versioningTemplate": "semver"
