--- a/custom-manager-mise.json5
+++ b/custom-manager-mise.json5
@@ -1,5 +1,6 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "mise": { "enabled": false },
     "customManagers": [
       {
         "customType": "regex",
