--- a/.github/workflows/actionlint.yaml
+++ b/.github/workflows/actionlint.yaml
@@ -5,6 +5,7 @@ name: Actionlint
 on:
   workflow_dispatch: {}
   pull_request: { paths: [".github/workflows/*.yaml"] }
+  push: { paths: [".github/workflows/*.yaml"] }
 
 permissions:
   contents: read
