fix: simplify mise regex

--- a/custom-manager-mise.json5
+++ b/custom-manager-mise.json5
@@ -3,13 +3,7 @@
     "mise": { "enabled": false },
     "packageRules": [
       {
-        "matchFileNames": [
-          "^\\.mise\\.toml$",
-          "^mise\\.toml$",
-          "^mise/config\\.toml$",
-          "^\\.config/mise\\.toml$",
-          "^\\.config/mise/config\\.toml$"
-        ],
+        "matchFileNames": [".?mise.toml"],
         "semanticCommitType": "chore",
         "semanticCommitScope": "mise",
         "addLabels": ["renovate/mise"]
@@ -19,13 +13,7 @@
       {
         "customType": "regex",
         "description": "Process npm packages in mise.toml",
-        "fileMatch": [
-          "^\\.mise\\.toml$",
-          "^mise\\.toml$",
-          "^mise/config\\.toml$",
-          "^\\.config/mise\\.toml$",
-          "^\\.config/mise/config\\.toml$"
-        ],
+        "fileMatch": [".?mise.toml"],
         "matchStrings": [
           "\"npm:(?<packageName>@[\\w\\-\\/]+)\" = \"(?<currentValue>[\\d\\.]+)\"",
           "\"npm:(?<packageName>[\\w\\-\\/]+)\" = \"(?<currentValue>[\\d\\.]+)\""
@@ -36,13 +24,7 @@
       {
         "customType": "regex",
         "description": "Process pipx packages in mise.toml",
-        "fileMatch": [
-          "^\\.mise\\.toml$",
-          "^mise\\.toml$",
-          "^mise/config\\.toml$",
-          "^\\.config/mise\\.toml$",
-          "^\\.config/mise/config\\.toml$"
-        ],
+        "fileMatch": [".?mise.toml"],
         "matchStrings": [
           "\"pipx:(?<packageName>[\\w\\-\\.]+)\" = \"(?<currentValue>[\\d\\.]+|latest)\""
         ],
@@ -52,13 +34,7 @@
       {
         "customType": "regex",
         "description": "Process aqua packages in mise.toml",
-        "fileMatch": [
-          "^\\.mise\\.toml$",
-          "^mise\\.toml$",
-          "^mise/config\\.toml$",
-          "^\\.config/mise\\.toml$",
-          "^\\.config/mise/config\\.toml$"
-        ],
+        "fileMatch": [".?mise.toml"],
         "matchStrings": [
           "\"aqua:(?<packageName>[\\w\\-]+\\/[\\w\\-]+)\" = \"(?<currentValue>[\\d\\.]+|latest|v[\\d\\.]+)\""
         ],
