--- a/custom-manager-mise.json5
+++ b/custom-manager-mise.json5
@@ -33,10 +33,11 @@
       },
       {
         "customType": "regex",
-        "description": "Process aqua packages in mise.toml",
+        "description": "Process aqua and ubi packages in mise.toml",
         "fileMatch": [".mise.toml", "mise.toml"],
         "matchStrings": [
-          "\"aqua:(?<packageName>[\\w\\-]+\\/[\\w\\-]+)\" = \"(?<currentValue>[\\d\\.]+|latest|v[\\d\\.]+)\""
+          "\"aqua:(?<packageName>[\\w\\-]+\\/[\\w\\-]+)\" = \"(?<currentValue>[\\d\\.]+|latest|v[\\d\\.]+)\"",
+          "\"ubi:(?<packageName>[\\w\\-]+\\/[\\w\\-]+)\" = \"(?<currentValue>[\\d\\.]+|latest|v[\\d\\.]+)\""
         ],
         "datasourceTemplate": "github-releases",
         "versioningTemplate": "semver",
