--- a/semantic-commits.json5
+++ b/semantic-commits.json5
@@ -38,7 +38,8 @@
         {"matchDatasources": ["docker"], "semanticCommitType": "fix", "semanticCommitScope": "container" },
         {"matchDatasources": ["go", "golang-version"], "semanticCommitType": "fix", "semanticCommitScope": "go" },
         {"matchDatasources": ["helm"], "semanticCommitType": "fix", "semanticCommitScope": "helm" },
-        {"matchDatasources": ["npm", "node-version"], "semanticCommitType": "fix", "semanticCommitScope": "node" },
+        {"matchDatasources": ["npm", "node-version"], "matchDepTypes": "dependencies", "semanticCommitType": "fix", "semanticCommitScope": "node" },
+        {"matchDatasources": ["npm", "node-version"], "matchDepTypes": "devDependencies", "semanticCommitType": "chore", "semanticCommitScope": "npm" },
         {"matchDatasources": ["pypi", "python-version"], "semanticCommitType": "fix", "semanticCommitScope": "python" },
         {"matchDatasources": ["rubygems", "ruby-version"], "semanticCommitType": "fix", "semanticCommitScope": "ruby" },
         {"matchDatasources": ["terraform-module", "terraform-provider"], "semanticCommitType": "fix", "semanticCommitScope": "terraform" },
