fix: set min release age to 3d to slow down fast releasing projects (even though the docs say no :kek:)

--- a/default.json5
+++ b/default.json5
@@ -13,6 +13,7 @@
         "github>mirceanton/renovate-config//custom-manager-github-links.json5",
         "github>mirceanton/renovate-config//custom-manager-yaml.json5"
     ],
+    "minimumReleaseAge": "3 days",
     "packageRules": [
         // Auto Merge Types
         { "matchUpdateTypes": ["minor", "patch", "digest"], "automerge": true, "automergeType": "branch" },
