fix: rebase when behind base branch

--- a/default.json5
+++ b/default.json5
@@ -4,6 +4,7 @@
     "dependencyDashboardTitle": "Renovate Dashboard 🤖",
     "timezone": "Europe/Bucharest",
     "gitAuthor": "mr-borboto[bot] <170036086+mr-borboto[bot]@users.noreply.github.com>",
+    "rebaseWhen": "behind-base-branch",
     "extends": [
         ":disableRateLimiting",
         "config:recommended",
