--- a/default.json5
+++ b/default.json5
@@ -5,6 +5,7 @@
     "timezone": "Europe/Bucharest",
     "gitAuthor": "mr-borboto[bot] <170036086+mr-borboto[bot]@users.noreply.github.com>",
     "rebaseWhen": "behind-base-branch",
+    "recreateWhen": "always",
     "extends": [
         ":disableRateLimiting",
         "config:recommended",
