fix: add rebaseStalePrs to handle force-push scenarios

--- a/default.json5
+++ b/default.json5
@@ -6,6 +6,7 @@
     "gitAuthor": "mr-borboto[bot] <170036086+mr-borboto[bot]@users.noreply.github.com>",
     "rebaseWhen": "behind-base-branch",
     "recreateWhen": "always",
+    "rebaseStalePrs": true,
     "extends": [
         ":disableRateLimiting",
         "config:recommended",
