chore: update linting config

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,8 @@
 [tools]
-node = "24"
-"npm:renovate" = "43"
-"aqua:rhysd/actionlint" = "1"
-"pipx:yamllint" = "1.38.0"
+node = "latest"
+"npm:renovate" = "latest"
+
+task = "latest"
+gh = "latest"
+actionlint = "latest"
+"npm:prettier" = "latest"
